# watchr

./: .env.example  .gitignore  .hadolint.yaml  .markdownlint.yml  .pre-commit-config.yaml  .yamllint.yml  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.gitea/workflows/: ci-deploy.yml  ci.yml
backend/: Dockerfile  pyproject.toml  ruff.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  user.py  watch_item.py  watchlist.py
backend/app/routers/: auth.py  recommend.py  search.py  users.py  watch_items.py  watchlists.py
backend/app/schemas/: user.py  watch_item.py  watchlist.py
backend/app/services/: auth.py  recommendations.py  tmdb.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_watch_items.py  test_watchlists.py
docs/: FEATURES.md  architecture.md  data-model.md  data-model.mmd  deployment.md
frontend/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: ConfirmModal.tsx  RatingModal.tsx  StarRating.tsx  WatchlistSettings.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  ItemDetail.tsx  Login.test.tsx  Login.tsx  WatchHistory.tsx  WatchlistDetail.tsx
frontend/src/test/: setup.ts  test-utils.tsx
frontend/src/types/: index.ts
samples/: sample_style.html
scripts/: deploy.sh  install-hooks.sh  pre-commit
